--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -51,7 +51,7 @@
       {10.2021 - now\\Remote}
       {bazel, haskell, nix, scala\\golang, akka-typed\\akka-streams, sbt}
       { \href{tweag.io}{Tweag} is a software innovation lab from France, gathering people around
-        functional programming (mostly \href{https://www.haskell.org}{Haskell}) and modern
+        functional programming (mostly \href{https://www.haskell.org}{Haskell}) and a modern
         software distribution stack like \href{https://nixos.org}{Nix} \& \href{https://bazel.build}{Bazel}.
         \begin{missions}
         \item Maintainer of \href{https://github.com/tweag/gazelle_cabal}{https://github.com/tweag/gazelle\_cabal}
@@ -66,7 +66,8 @@
       {\href{https://www.epam.com}{Epam Systems} (under contract to \href{https://www.ubs.com}{UBS})}
       {08.2020 - 10.2021\\Wrocław, Poland}
       {scala, akka-http, cats,\\akka-streams, kafka,\\bash, gradle}
-      {Member of Next Generation Archive solution team, delivering a system designed to store banking documents.
+      {Member of Next Generation Archive team, where we've been delivering a proprietary storage solution built on
+        top of Hitachi database.
       }
 %----------------------------------------------------------------------------
 \story{scala developer}
@@ -90,10 +91,9 @@
       {07.2018 - 06.2019\\Gdańsk, Poland}
       {compilers, shapeless,\\scala-macros, fs2, zio,\\monocle, scalaz,\\antlr4, sbt}
       {Worked for pre-silicon group under Intel Network Division (former Fulcrum Microsystems from Caltech).
-        Essentially, company hired me to develop simulation model for next generation ethernet switch in scala.
-        Due to priorities inversion, later my team focused on
-        \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler development.
-        Here are some of my key achievements:
+        Developed simulation model for the next generation ethernet switch. In a team of three people, we've
+        managed to develop the initial version of
+        \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler.
         \begin{missions}
         \item I've developed probably first fully compliant, built-in SRDL1.0 preprocessor
         \item Redefined SRDL1.0 grammar
@@ -108,20 +108,17 @@
       {Market Liquidity Credit Risk (MLQR) application development. It was an internal,
         proprietary product, responsible for calculating daily values of credit risk
         coefficient.
-        \begin{missions}
-        \item Developed local Spark deployment of ETL job for test configuration
-        \item Code reviews \& bug fixing
-        \end{missions}
       }
 %----------------------------------------------------------------------------
 \story{scala developer}{\href{https://www.scalac.io}{Scalac}}
       {2017 - 2018\\Gdańsk, Poland}
       {scala, akka-streams,\\graphql, cassandra,\\kafka, play, mtl,\\flink, marathon}
-      {For the vast majority of time spend at Scalac, I worked for Qvantel - a Finnish business solution systems provider for telco companies.
-        As a Scalac, we developed for Qvantel several microservices, mostly responsible for ETL jobs (messages transformation and ingestion).
-        Scalable apps developed for Qvantel were deployed on emerging markets like Bolivia, Ecuador or Honduras. For one of them we satisfied client's constraint
+      {For the vast majority of time spent at Scalac, I worked for Qvantel - a Finnish business solution
+        systems provider for telco companies. As a Scalac, we developed for Qvantel several microservices,
+        mostly responsible for ETL jobs. Scalable apps developed for Qvantel were deployed in emerging markets
+        like Bolivia, Ecuador or Honduras. For one of them we satisfied the client's constraint
         to process \approx12k messages per second. Next, the team was asked to develop proof-of-concept
-        GraphQL application optimizing as a replacement for existing RESTful based stack. More about this
+        GraphQL application as an optimizing and replacement for existing RESTful based stack. More about this
         cooperation can be found under \emph{Publications / public speeches} section.
       }
 %----------------------------------------------------------------------------
@@ -130,13 +127,13 @@
         {Intel Technology Poland}}
       {2014 - 2017\\Gdańsk, Poland}
       {java ee, c\#, c++11,\\gradle, docker,\\orientdb, postgres,\\nodejs, bash}
-      {The company was looking for experienced validation engineer for newly formed \href{https://www.intel.com/intelRSD}{Rackscale Design (RSD)} team.
-        My duties were to develop high quality testing libraries and provide mentorship for other team members.
-        After some time I've joined development teams. Firstly, to help with firmware code, especially to model LVM system under firmware component.
-        Later, I joined development team of
+      {Initially, I joined the company as a \href{https://www.intel.com/intelRSD}{Rackscale Design (RSD)} validation engineer, where
+        I developed high quality testing libraries and gave mentorship to other team members. Next, I became the RSD firmware developer,
+        where I helped to model LVM system under firmware component. Later, I was moved to the
         \href{https://www.intel.com/content/www/us/en/architecture-and-technology/rack-scale-design/pod-manager-user-guide-v2-1.html}{POD Manager} component,
-        where I spend most of my time at Intel. I've been developing RESTful web service, responsible for assembly and system composition of Intel's RSD. 
-        Some of my work can still be found at github \emph{\href{https://github.com/intel/intelRSD}{intel/intelRSD}}.
+        where I spend most of my time at Intel. Essentially, I've been developing a RESTful web service, responsible
+        for assembly and system composition of Intel's RSD. Some of my work can still be found at github
+        \emph{\href{https://github.com/intel/intelRSD}{intel/intelRSD}}.
         \begin{missions}
         \item I've developed most of testing code \& libraries (\textasciitilde50\% of commits were mine)
         \item Implemented PODManager composition logic
@@ -148,12 +145,8 @@
       {2012 - 2014\\Gdynia, Poland}
       {c++, c, stl, boost,\\java, groovy, bash,\\sybase, rendezvous}
       {Development of Kondor+, a market-leading trade and risk management platform,
-        allowing users to manage global trading activities. Kondor+ has the broadest
+        allowing users to manage global trading activities. Kondor+ had the broadest
         installed base worldwide with more than 450 sites in 67 countries.
-        \begin{missions}
-        \item Fixed several performance issues
-        \item MarkitWire adapter development
-        \end{missions}
       }
 %----------------------------------------------------------------------------
 \story{software engineer}
@@ -172,10 +165,10 @@
 %----------------------------------------------------------------------------
 \story{internship}{\href{https://voicelab.ai}{Voicelab} and \href{https://micromade.pl}{Micromade}}
       {2009 - 2011\\Gdańsk, Poland}
-      {c++, c, vcl, matlab, php}
-      {During my studies I was hired by Voicelab to develop several Matlab simulations and php-based
-        website, utilizing noise reduction algorithms for sound recordings. On the other hand, at Micromade,
-        I was responsible for implementing brand new user interface of `bibinet` application - their well-known
+      {c++, c, vcl,\\matlab, php}
+      {During my studies I was hired by Voicelab to develop several Matlab simulations and the php-based
+        website, utilizing noise reduction algorithms for sound recordings. On the other hand at Micromade,
+        I was responsible for implementing the brand new user interface of `bibinet` application - their well-known
         product for access control and work time tracking.
       }
 %----------------------------------------------------------------------------
