--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -54,7 +54,6 @@
         functional programming (mostly \href{https://www.haskell.org}{Haskell}) and a modern
         software distribution stack like \href{https://nixos.org}{Nix} \& \href{https://bazel.build}{Bazel}.
         \begin{missions}
-        \item Maintainer of \href{https://github.com/tweag/gazelle_cabal}{https://github.com/tweag/gazelle\_cabal}
         \item Under contract to \href{https://www.digitalasset.com}{Digital Asset} -
           Daml/Canton smart contract platform
         \item Under contract to \href{https://www.heb.com}{H-E-B} -
@@ -189,10 +188,10 @@
       {Maintainer of \href{https://github.com/kczulko/rules\_elm}{rules\_elm} - rules for building Elm applications using the Bazel build system.
       }
 \story{\href{https://github.com/tweag/gazelle\_cabal}{gazelle\_cabal}}{Bazel}{Bazel}
-      {bazel, haskell, nix, go}
+      {bazel, haskell,\\nix, go}
       {Maintainer of \href{https://github.com/tweag/gazelle\_cabal}{gazelle\_cabal} - gazelle extension for converting Cabal build to Bazel
       }
-\story{\href{https://github.com/kczulko/daml-mode-flake}{daml-mode-flake}}{Nix}{Nix}
+\story{\href{https://github.com/kczulko/daml-mode-flake}{daml-mode-flake}}{Nix}{Emacs}
       {nix}
       {Nix derivation for Emacs \href{https://github.com/digital-asset/daml}{Daml mode}
       }
@@ -207,7 +206,7 @@
 
 \section{Publications / Public speeches}
 \story{Tweag}{Blog}{2022\\Paris, France}
-      {bazel, nix,\\cabal,\\haskell elm}
+      {bazel, haskell,\\cabal, nix\\elm}
       {Converting a polyglot project build to Bazel
         \begin{missions}
           \item \href{https://www.tweag.io/blog/2022-10-20-bazel-example-servant-elm-1/}{Part 1}
