chore: updated cv

--- a/src/kczulko-cv.tex
+++ b/src/kczulko-cv.tex
@@ -17,16 +17,16 @@
 %\academictitle{PhD}
 \firstname{Karol}
 \lastname{Czułkowski}
-\title{functional dev}
-\quote{\itshape Self-employed functional developer with ~ 13 years of overall experience}
+\title{software engineer}
+\quote{\itshape Software engineer with >15 years of overall experience}
 
 %\cvpicture{./samplepic.jpg}
 % Add up to 10 assets (0 to 9)
 \setcvasset[0]{\emph{Experienced} software developer}
-\setcvasset[1]{\emph{Functional} programming}
-\setcvasset[2]{\emph{Knowledge} sharing}
-\setcvasset[3]{\emph{Build} systems}
-\setcvcontact[email]{karol.czulkowski@pm.me}
+\setcvasset[1]{\emph{Build} systems}
+\setcvasset[2]{\emph{Functional} programming}
+\setcvasset[3]{\emph{Knowledge} sharing}
+\setcvcontact[email]{karol.czulkowski@protonmail.com}
 \setcvcontact[cellphone]{!!!CELLPHONE!!!}
 \setcvcontact[linkedin]{karol-czulkowski}
 %% \setcvcontact[twitter]{@kczulko}
