--- a/src/sections/experience.tex
+++ b/src/sections/experience.tex
@@ -1,8 +1,17 @@
 \section{Experience}
+\story{build engineer consultant}
+      {\href{https://www.qarik.com}{Qarik Group / Egen.ai} (Under contract to \emph{\href{https://www.sabre.com}{Sabre}})}
+      {09.2024 - 02.2025\\Remote}
+      {bazel, nix}
+      { \href{https://www.qarik.com}{Qarik Group} provides cloud transformation, data migration, AI services
+        and platform engineering to companies in the communications, financial services, healthcare and
+        life sciences, high tech, and retail industries.
+      }
+%----------------------------------------------------------------------------
 \story{software engineer}
       {\href{https://www.mewe.com}{MeWe}}
       {06.2023 - 06.2024\\Remote}
-      {scala, sbt, web3,\\haskell, bazel, nix}
+      {scala, sbt, web3,\\haskell, bazel,\\nix, k8s}
       { \href{mewe.com}{MeWe} is a global social networking service, being described as a Facebook
         alternative.
         \begin{missions}
@@ -14,14 +23,14 @@
 \story{functional engineer}
       {\href{https://www.tweag.io}{Tweag}}
       {10.2021 - 05.2023\\Remote}
-      {bazel, haskell, nix, scala\\golang, akka-typed\\akka-streams, sbt}
+      {bazel, haskell, nix, scala\\golang, akka-typed,\\akka-streams, sbt}
       { \href{tweag.io}{Tweag} is a software innovation lab from France, gathering people around
         functional programming (mostly \href{https://www.haskell.org}{Haskell}) and a modern
         software distribution stack like \href{https://nixos.org}{Nix} \& \href{https://bazel.build}{Bazel}.
         \begin{missions}
-        \item Under contract to \href{https://www.digitalasset.com}{Digital Asset} -
+          \item Under contract to \href{https://www.digitalasset.com}{Digital Asset} -
           Daml/Canton smart contract platform
-        \item Under contract to \href{https://www.heb.com}{H-E-B} -
+          \item Under contract to \href{https://www.heb.com}{H-E-B} -
           grocery retail from Texas, USA
         \end{missions}
       }
@@ -37,13 +46,13 @@
 \story{scala developer}
       {\href{https://www.jit.team}{Jit Team} (under contract to \href{https://www.nordea.com}{Nordea Poland})}
       {07.2019 - 05.2020\\Gdynia, Poland}
-      {scala, cats, http4s,\\shapeless, tagless-final,\\fs2, bazel, nix, kafka,\\elasticsearch,\\microservices,\\kubernetes,\\postgres
+      {scala, cats, http4s,\\shapeless, tagless-final,\\fs2, bazel, nix, kafka,\\elasticsearch, k8s,\\microservices,\\postgres
       }
       {Development of HDFS metadata indexing hub within Nordea's data lake - proprietary solution akin to \href{https://egeria.odpi.org}{\emph{odpi/egeria}}.
         \begin{missions}
-        \item Introduced modern FP architecture and unified technology stack
-        \item Implemented and refactored vast majority of existing microservices
-        \item Designed and planned several features
+          \item Introduced modern FP architecture and unified technology stack
+          \item Implemented and refactored vast majority of existing microservices
+          \item Designed and planned several features
         \end{missions}
       }
 %----------------------------------------------------------------------------
@@ -56,9 +65,9 @@
         managed to create the initial version of
         \href{https://www.accellera.org/downloads/standards/systemrdl}{SystemRDL 1.0} (SRDL) compiler.
         \begin{missions}
-        \item Developed probably first fully compliant SRDL1.0 pre-processor
-        \item Redefined SRDL1.0 grammar
-        \item Designed and implemented FP-aligned memory model for next-gen Intel's ethernet switch simulator
+          \item Developed probably first fully compliant SRDL1.0 pre-processor
+          \item Redefined SRDL1.0 grammar
+          \item Designed and implemented FP-aligned memory model for next-gen Intel's ethernet switch simulator
         \end{missions}
       }
 %----------------------------------------------------------------------------
@@ -120,12 +129,12 @@
         \end{missions}
       }      
 %----------------------------------------------------------------------------
-\story{internships}{\href{https://voicelab.ai}{Voicelab} and \href{https://micromade.pl}{Micromade}}
-      {2009 - 2011\\Gdańsk, Poland} {c++, c, vcl,\\matlab, php}
-      {During studies, I've joined Voicelab to develop several
-      Matlab simulations and the php-based website, utilizing noise
-      reduction algorithms for sound recordings. On the other hand at
-      Micromade, I've implemented the brand new user interface of
-      `bibinet` application - their well-known product for access
-      control and work time tracking. }
+%%\story{internships}{\href{https://voicelab.ai}{Voicelab} and \href{https://micromade.pl}{Micromade}}
+%%      {2009 - 2011\\Gdańsk, Poland} {c++, c, vcl,\\matlab, php}
+%%      {During studies, I've joined Voicelab to develop several
+%%      Matlab simulations and the php-based website, utilizing noise
+%%      reduction algorithms for sound recordings. On the other hand at
+%%      Micromade, I've implemented the brand new user interface of
+%%      `bibinet` application - their well-known product for access
+%%      control and work time tracking. }
       
