--- a/src/sections/open-source.tex
+++ b/src/sections/open-source.tex
@@ -1,4 +1,8 @@
 \section{Open source}
+\story{\href{https://github.com/kczulko/rules\_nim}{rules\_nim}}{Bazel}{Bazel}
+      {bazel, nix, nim}
+      {Author of \href{https://github.com/kczulko/rules\_nim}{rules\_nim} - rules for building Nim applications using the Bazel build system.
+      }
 \story{\href{https://github.com/kczulko/rules\_elm}{rules\_elm}}{Bazel}{Bazel}
       {bazel, nix, elm}
       {Maintainer of \href{https://github.com/kczulko/rules\_elm}{rules\_elm} - rules for building Elm applications using the Bazel build system.
@@ -7,11 +11,7 @@
       {bazel, haskell,\\nix, go}
       {Former maintainer of \href{https://github.com/tweag/gazelle\_cabal}{gazelle\_cabal} - gazelle extension for converting Cabal build to Bazel
       }
-%% \story{\href{https://github.com/kczulko/nixos-config}{nixos-config}}{NixOS}{NixOS}
-%%       {nix, bash}
-%%       {My NixOS configuration and some dotfiles
-%%       }
 \story{various contributions}{GitHub}{GitHub}
       {scala, cabal, sbt}
-      {Multiple, small contributions to variety of projects.
+      {Multiple contributions to variety of projects.
       }
